--- a/react-boolflix/package.json
+++ b/react-boolflix/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "axios": "^1.9.0",
     "react": "^19.1.0",
+    "react-country-flag": "^3.1.0",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.6.0"
   },
